k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poodmaan
spec:
  rules:
    - host: web.poodmaan.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000
    - host: studio.poodmaan.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: creator-studio
                port:
                  number: 3001
